syntax = "proto3";

package pb;

option go_package = "go-todolist-grpc/api/pb";

message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
    optional string token = 6;
}

message Category {
    int64 id = 1;
    string name = 2;
    string created_at = 3;
    string updated_at = 4;
}

// To Do: Task