syntax = "proto3";

package pb;

// import "google/protobuf/timestamp.proto";

option go_package = "go-todolist-grpc/api/pb";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message RegisterUserRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message UpdateUserRequest {
    int32 user_id = 1;
    optional string username = 2;
    optional string password = 3;
    optional bool is_email_verified = 4;
}
